--- a/TaskManager/src/styles.css
+++ b/TaskManager/src/styles.css
@@ -1,7 +1,18 @@
-@import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 
 /* You can add global styles to this file, and also import other style files */
 
 /* Global helpers */
-.container { padding: 16px; max-width: 1100px; margin: 0 auto; }
-.mat-mdc-table { width: 100%; }
+.container {
+  padding: 16px;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+.mat-mdc-table {
+  width: 100%;
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
